test/official_tests/class/local_inherit_self.lox
{
  class Foo < Foo {} // error: {"line":2,"message":"A class can't inherit from itself","type":"RuntimeError"}
}
// [c line 5] Error at end: Expect '}' after block.
